--- a/index.html
+++ b/index.html
@@ -9,54 +9,54 @@
 </head>
 <body>
     <div class="login-modal login-modal-blue">
-        <div class="login-form login-form-blue">
+        <div class="login-form">
             <form class="subscribe-form" action="#">
-                <input class="login-form-text" type="text" placeholder="username">
-                <input class="login-form-password" type="password" placeholder="password">
-                <button class="login-form-btn login-form-btn-blue">Login</button>
+                <input class="login-form-text" type="text" placeholder="username" required>
+                <input class="login-form-password" type="password" placeholder="password" required>
+                <button class="login-form-btn">Login</button>
             </form>
-            <div class="sign-form">
-                <p>Don’t have an account?
-                    <span class="sign-form-span-blue">Sign up</span>
+            <div class="sign-up">
+                <p class="sign-up-text">Don’t have an account?
+                    <span class="sign-up-link">Sign up</span>
                 </p>
                 <p>Forgot your password?
-                    <span class="sign-form-span-blue">Reset password</span>
+                    <span class="sign-up-link">Reset password</span>
                 </p>
             </div>
         </div>
     </div>
 
     <div class="login-modal login-modal-green">
-        <div class="login-form login-form-green">
+        <div class="login-form">
             <form class="subscribe-form" action="#">
-                <input class="login-form-text" type="text" placeholder="username">
-                <input class="login-form-password" type="password" placeholder="password">
-                <button class="login-form-btn login-form-btn-green">Login</button>
+                <input class="login-form-text" type="text" placeholder="username" required>
+                <input class="login-form-password" type="password" placeholder="password" required>
+                <button class="login-form-btn">Login</button>
             </form>
-            <div class="sign-form">
-                <p>Don’t have an account?
-                    <span class="sign-form-span-green">Sign up</span>
+            <div class="sign-up">
+                <p class="sign-up-text">Don’t have an account?
+                    <span class="sign-up-link">Sign up</span>
                 </p>
                 <p>Forgot your password?
-                    <span class="sign-form-span-green">Reset password</span>
+                    <span class="sign-up-link">Reset password</span>
                 </p>
             </div>
         </div>
     </div>
 
     <div class="login-modal login-modal-red">
-        <div class="login-form login-form-red">
+        <div class="login-form">
             <form class="subscribe-form" action="#">
-                <input class="login-form-text" type="text" placeholder="username">
-                <input class="login-form-password" type="password" placeholder="password">
-                <button class="login-form-btn login-form-btn-red">Login</button>
+                <input class="login-form-text" type="text" placeholder="username" required>
+                <input class="login-form-password" type="password" placeholder="password" required>
+                <button class="login-form-btn">Login</button>
             </form>
-            <div class="sign-form">
-                <p>Don’t have an account?
-                    <span class="sign-form-span-red">Sign up</span>
+            <div class="sign-up">
+                <p class="sign-up-text">Don’t have an account?
+                    <span class="sign-up-link">Sign up</span>
                 </p>
                 <p>Forgot your password?
-                    <span class="sign-form-span-red">Reset password</span>
+                    <span class="sign-up-link">Reset password</span>
                 </p>
             </div>
         </div>
