--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <p class="sign-up-text">Don’t have an account?
                     <span class="sign-up-link">Sign up</span>
                 </p>
-                <p>Forgot your password?
+                <p  class="sign-up-text">Forgot your password?
                     <span class="sign-up-link">Reset password</span>
                 </p>
             </div>
@@ -37,7 +37,7 @@
                 <p class="sign-up-text">Don’t have an account?
                     <span class="sign-up-link">Sign up</span>
                 </p>
-                <p>Forgot your password?
+                <p class="sign-up-text">Forgot your password?
                     <span class="sign-up-link">Reset password</span>
                 </p>
             </div>
@@ -55,7 +55,7 @@
                 <p class="sign-up-text">Don’t have an account?
                     <span class="sign-up-link">Sign up</span>
                 </p>
-                <p>Forgot your password?
+                <p class="sign-up-text">Forgot your password?
                     <span class="sign-up-link">Reset password</span>
                 </p>
             </div>
