--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="login-modal login-modal-blue">
         <div class="login-form">
+            <button class="login-modal-close">x</button>
             <form class="subscribe-form" action="#">
                 <input class="login-form-text" type="text" placeholder="username" required>
                 <input class="login-form-password" type="password" placeholder="password" required>
@@ -28,6 +29,7 @@
 
     <div class="login-modal login-modal-green">
         <div class="login-form">
+            <button class="login-modal-close">x</button>
             <form class="subscribe-form" action="#">
                 <input class="login-form-text" type="text" placeholder="username" required>
                 <input class="login-form-password" type="password" placeholder="password" required>
@@ -46,6 +48,7 @@
 
     <div class="login-modal login-modal-red">
         <div class="login-form">
+            <button class="login-modal-close">x</button>
             <form class="subscribe-form" action="#">
                 <input class="login-form-text" type="text" placeholder="username" required>
                 <input class="login-form-password" type="password" placeholder="password" required>
